--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,7 +2,9 @@ AllCops:
   TargetRubyVersion: 3.0
 
 Style/StringLiterals:
+  Enabled: true
   EnforcedStyle: single_quotes
 
 Style/StringLiteralsInInterpolation:
+  Enabled: true
   EnforcedStyle: double_quotes
